--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-*.svg filter=lfs diff=lfs merge=lfs -text
-*.stl filter=lfs diff=lfs merge=lfs -text
+generated_files/robots/don1/robot.stl filter=lfs diff=lfs merge=lfs -text
