--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "parts/gobilda"]
 	path = parts/gobilda
-	url = https://github.com/openvmp/openvmp-parts-gobilda.git
+	url = ../openvmp-parts-gobilda.git
