--- a/partcad.yaml
+++ b/partcad.yaml
@@ -1,10 +1,8 @@
 import:
-  partcad-index:
+  pub:
     type: git
     url: https://github.com/openvmp/partcad-index.git
-  openvmp-robots-don1:
+
+  robots/don1:
     type: local
     path: robots/don1
-  openvmp-parts:
-    type: local
-    path: parts
